src/snapshots/common_mark_language_server__lsp__tests__hover-2.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::HoverRequest>(HoverParams {\n        text_document_position_params: TextDocumentPositionParams::new(TextDocumentIdentifier {\n                uri,\n            }, Position::new(0, 3)),\n        work_done_progress_params: WorkDoneProgressParams::default(),\n    })"
---
Ok(
    Some(
        Hover {
            contents: Array(
                [
                    String(
                        "Inline code",
                    ),
                ],
            ),
            range: Some(
                Range {
                    start: Position {
                        line: 0,
                        character: 0,
                    },
                    end: Position {
                        line: 0,
                        character: 12,
                    },
                },
            ),
        },
    ),
)
