src/snapshots/common_mark_language_server__lsp__tests__references-5.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::References>(ReferenceParams {\n        text_document_position: TextDocumentPositionParams {\n            text_document: TextDocumentIdentifier::new(uri.clone()),\n            position: Position::new(9, 0),\n        },\n        context: ReferenceContext { include_declaration: true },\n        work_done_progress_params: WorkDoneProgressParams::default(),\n        partial_result_params: PartialResultParams::default(),\n    })"
---
Ok(
    Some(
        [
            Location {
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/foo.md",
                    query: None,
                    fragment: None,
                },
                range: Range {
                    start: Position {
                        line: 9,
                        character: 0,
                    },
                    end: Position {
                        line: 9,
                        character: 17,
                    },
                },
            },
        ],
    ),
)
