src/snapshots/common_mark_language_server__lsp__tests__rename-2.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::Rename>(RenameParams {\n                text_document_position: TextDocumentPositionParams::new(TextDocumentIdentifier::new(file3.clone()),\n                    Position::new(1, 2)),\n                new_name: \"H1\".into(),\n                work_done_progress_params: WorkDoneProgressParams {\n                    work_done_token: None,\n                },\n            }).unwrap().map(sorted_edits)"
---
Some(
    Some(
        [
            (
                Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/file3.md",
                    query: None,
                    fragment: None,
                },
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 1,
                                character: 2,
                            },
                            end: Position {
                                line: 1,
                                character: 4,
                            },
                        },
                        new_text: "H1",
                    },
                ],
            ),
        ],
    ),
)
