src/snapshots/common_mark_language_server__lsp__tests__rename-3.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::Rename>(RenameParams {\n                text_document_position: TextDocumentPositionParams::new(TextDocumentIdentifier::new(file3.clone()),\n                    Position::new(2, 3)),\n                new_name: \"H2\".into(),\n                work_done_progress_params: WorkDoneProgressParams {\n                    work_done_token: None,\n                },\n            }).unwrap().map(sorted_edits)"
---
Some(
    Some(
        [
            (
                Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/file3.md",
                    query: None,
                    fragment: None,
                },
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 2,
                                character: 3,
                            },
                            end: Position {
                                line: 2,
                                character: 5,
                            },
                        },
                        new_text: "H2",
                    },
                ],
            ),
        ],
    ),
)
