src/snapshots/common_mark_language_server__lsp__tests__rename-4.snap
---
source: src/lsp.rs
expression: "server.send_request::<request::Rename>(RenameParams {\n                text_document_position: TextDocumentPositionParams::new(TextDocumentIdentifier::new(file3.clone()),\n                    Position::new(3, 4)),\n                new_name: \"H3\".into(),\n                work_done_progress_params: WorkDoneProgressParams {\n                    work_done_token: None,\n                },\n            }).unwrap().map(sorted_edits)"
---
Some(
    Some(
        [
            (
                Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/file3.md",
                    query: None,
                    fragment: None,
                },
                [
                    TextEdit {
                        range: Range {
                            start: Position {
                                line: 3,
                                character: 4,
                            },
                            end: Position {
                                line: 3,
                                character: 6,
                            },
                        },
                        new_text: "H3",
                    },
                ],
            ),
        ],
    ),
)
